--- a/pattern.html
+++ b/pattern.html
@@ -7,10 +7,19 @@
 </head>
 <body>
     <form action="submit.html">
+         <input type="text"pattern="\+91[6-9]{0-9}{9}"placeholder="Enter Mobile number"required>
+        <!-- <input type="submit"> -->
+        <br><br>
         <input type="text"pattern="{2-9}{12}"placeholder="Enter Adhaar"required>
-        <input type="submit">
+        <!-- <input type="submit"> -->
+        <br><br>
+        <input type="text"pattern="{1-9}{11}"placeholder="Enter Bank account number"required>
+        <!-- <input type="submit"> -->
+        <br><br>
         <input type="text"pattern="{A-Z}{5}{0-9}{A-Z}{1}"placeholder="Enter PanCard"required>
-        <input type="submit">
+        <!-- <input type="submit"> -->
+         <br><br>
+         <button>Submit</button>
 
     </form>
 </body>
