--- a/CSS Tasks/display.html
+++ b/CSS Tasks/display.html
@@ -6,8 +6,8 @@
     <title>Document</title>
     <style>
         .container >.Item{
-            width:350px;
-            height: auto;
+            width:250px;
+            height: 500px;
             color:black;
             margin:10px;
             display: inline-block;
@@ -21,11 +21,9 @@
         .Item p{
             margin: 10px;
             font-size: 15px;
-            text-align: center;
             font-family: Arial, sans-serif;
         }
         .Item h3{
-            text-align: center;
             margin: 10px;
             font-size: 15px;
             font-family: Arial, sans-serif;
@@ -33,7 +31,8 @@
     </style>
 </head>
 <body>
-    <div class="container">
+    <center>
+        <div class="container">
         <div class="Item">
         <img src="sandwich.jpg" alt="Sandwich">
         <h3>The Perfect Sandwich, A Real NYC Classic</h3>
@@ -77,5 +76,6 @@
         </div>
         
     </div>
+    </center>
 </body>
 </html>
