--- a/CSS Tasks/grid2.html
+++ b/CSS Tasks/grid2.html
@@ -91,19 +91,45 @@
 </head>
 <body>
     <div class="container">
-        <div class="item item-1"><img src="wedding.jpg" alt="Wedding"></div>
-        <div class="item item-2"><img src="underwater.jpg" alt="Underwater"></div>
-        <div class="item item-3"><img src="rocks.jpg" alt="Rocks"></div>
-        <div class="item item-4"><img src="ocean.jpg" alt="Ocean"></div>
-        <div class="item item-5"><img src="wedding.jpg" alt="Wedding 2"></div>
-        <div class="item item-6"><img src="falls2.jpg" alt="Falls"></div>
-        <div class="item item-7"><img src="mountainskies.jpg" alt="Mountains"></div>
-        <div class="item item-8"><img src="paris (1).jpg" alt="Paris"></div>
-        <div class="item item-9"><img src="rocks.jpg" alt="Rocks 2"></div>
-        <div class="item item-10"><img src="nature (1).jpg" alt="Nature"></div>
-        <div class="item item-11"><img src="mist.jpg" alt="Mist"></div>
-        <div class="item item-12"><img src="paris (1).jpg" alt="Paris 2"></div>
-        <div class="item item-13"><img src="underwater.jpg" alt="Underwater 2"></div>
+        <div class="item item-1">
+            <img src="wedding.jpg" alt="Wedding">
+        </div>
+        <div class="item item-2">
+            <img src="underwater.jpg" alt="Underwater">
+        </div>
+        <div class="item item-3">
+            <img src="rocks.jpg" alt="Rocks">
+        </div>
+        <div class="item item-4">
+            <img src="ocean.jpg" alt="Ocean">
+        </div>
+        <div class="item item-5">
+            <img src="wedding.jpg" alt="Wedding 2">
+        </div>
+        <div class="item item-6">
+            <img src="falls2.jpg" alt="Falls">
+        </div>
+        <div class="item item-7">
+            <img src="mountainskies.jpg" alt="Mountains">
+        </div>
+        <div class="item item-8">
+            <img src="paris (1).jpg" alt="Paris">
+        </div>
+        <div class="item item-9">
+            <img src="rocks.jpg" alt="Rocks 2">
+        </div>
+        <div class="item item-10">
+            <img src="nature (1).jpg" alt="Nature">
+        </div>
+        <div class="item item-11">
+            <img src="mist.jpg" alt="Mist">
+        </div>
+        <div class="item item-12">
+            <img src="paris (1).jpg" alt="Paris 2">
+        </div>
+        <div class="item item-13">
+            <img src="underwater.jpg" alt="Underwater 2">
+        </div>
     </div>
     </div>
 
