--- a/javascript/jobportalproject/applied.html
+++ b/javascript/jobportalproject/applied.html
@@ -1,69 +1,26 @@
 <!DOCTYPE html>
 <html>
-
 <head>
-    <title>Applied Jobs</title>
-    <link rel="stylesheet" href="style.css">
+<title>My Applications</title>
+<link rel="stylesheet" href="style.css">
 </head>
-
 <body>
 
-    <h2 class="title">My Applied Jobs</h2>
+<h2 class="title">My Applied Jobs</h2>
 
-    <div class="container">
-        <table border="1">
-            <thead>
-                <tr>
-                    <th>Title</th>
-                    <th>Company</th>
-                    <th>Location</th>
-                    <th>Skills</th>
-                    <th>Status</th>
-                </tr>
-            </thead>
-            <tbody id="appliedJobTable"></tbody>
-        </table>
+<div class="table-box">
+<button onclick="goBack()">Back</button>
 
-        <br>
-        <button onclick="goBack()">Back</button>
+<table>
+<thead>
+<tr>
+<th>Job</th><th>Company</th><th>Date</th><th>Resume</th><th>Delete</th>
+</tr>
+</thead>
+<tbody id="appliedTable"></tbody>
+</table>
+</div>
 
-    </div>
-    <script src="script.js"></script>
+<script src="script.js"></script>
 </body>
-
 </html>
-
-
-<!-- <!DOCTYPE html>
-<html>
-
-<head>
-    <title>Applied Jobs</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-
-<body>
-
-    <h2 class="title">Applied Jobs</h2>
-
-    <div class="table-box">
-        <table>
-            <thead>
-                <tr>
-                    <th>Title</th>
-                    <th>Company</th>
-                    <th>Location</th>
-                    <th>Skills</th>
-                </tr>
-            </thead>
-            <tbody id="appliedJobTable"></tbody>
-        </table>
-
-        <br>
-        <button onclick="goBack()">Back</button>
-    </div>
-
-    <script src="script.js"></script>
-</body>
-
-</html> -->
