--- a/javascript/jobportalproject/admin.html
+++ b/javascript/jobportalproject/admin.html
@@ -1,48 +1,38 @@
 <!DOCTYPE html>
 <html>
-
 <head>
-    <title>Admin Dashboard</title>
-    <link rel="stylesheet" href="style.css">
+<title>Admin Dashboard</title>
+<link rel="stylesheet" href="style.css">
 </head>
-
 <body>
 
-    <h2 class="title">Admin Dashboard</h2>
+<h2 class="title">Admin Dashboard</h2>
 
-    <div class="container">
-        <h3>Add Job</h3>
+<div class="table-box">
+<input id="jobTitle" placeholder="Job Title">
+<input id="companyName" placeholder="Company Name">
+<input id="jobLocation" placeholder="Location">
+<input id="jobPackage" placeholder="Package">
+<input id="jobSkills" placeholder="Skills">
+<textarea id="jobDesc" placeholder="Job Description"></textarea>
 
-        <input type="text" id="jobTitle" placeholder="Job Title">
-        <input type="text" id="companyName" placeholder="Company Name">
-        <input type="text" id="jobLocation" placeholder="Location">
-        <input type="text" id="jobSkills" placeholder="Skills">
+<button id="addJobBtn">Add Job</button>
+<button onclick="location.href='adminApplied.html'">View Applied Jobs</button>
+<button onclick="logout()">Logout</button>
+</div>
 
-        <button id="addJobBtn">Add Job</button>
-    </div>
+<div class="table-box">
+<table>
+<thead>
+<tr>
+<th>Title</th><th>Company</th><th>Location</th>
+<th>Package</th><th>Skills</th><th>Delete</th>
+</tr>
+</thead>
+<tbody id="adminJobTable"></tbody>
+</table>
+</div>
 
-    <br>
-    <div class="container">
-        <h3>All Jobs</h3>
-
-        <table>
-            <thead>
-                <tr>
-                    <th>Title</th>
-                    <th>Company</th>
-                    <th>Location</th>
-                    <th>Skills</th>
-                    <th>Delete</th>
-                </tr>
-            </thead>
-            <tbody id="adminJobTable"></tbody>
-        </table>
-
-        <br>
-        <button onclick="logout()">Logout</button>
-
-    </div>
-    <script src="script.js"></script>
+<script src="script.js"></script>
 </body>
-
-</html>
+</html> 
