--- a/javascript/jobportalproject/index.html
+++ b/javascript/jobportalproject/index.html
@@ -1,31 +1,28 @@
 <!DOCTYPE html>
 <html>
-
 <head>
-    <title>Login</title>
-    <link rel="stylesheet" href="style.css">
+<title>Login</title>
+<link rel="stylesheet" href="style.css">
 </head>
-
 <body>
 
-    <h2 class="title">Job Portal Login</h2>
+<h2 class="title">Job Portal Login</h2>
 
-    <div class="center">
-        <div class="box">
-            <input type="email" id="loginEmail" placeholder="Email">
-            <input type="password" id="loginPassword" placeholder="Password">
+<div class="center">
+<div class="box">
+<select id="loginRole">
+<option value="user">User</option>
+<option value="admin">Admin</option>
+</select>
 
-            <select id="loginRole">
-                <option value="user">User</option>
-                <option value="admin">Admin</option>
-            </select>
+<input id="loginEmail" placeholder="Email">
+<input id="loginPassword" type="password" placeholder="Password">
 
-            <button id="loginBtn">Login</button>
-            <p><a href="register.html">New user? Register</a></p>
-        </div>
-    </div>
+<button id="loginBtn">Login</button>
+<p>New user? <a href="register.html">Register</a></p>
+</div>
+</div>
 
-    <script src="script.js"></script>
+<script src="script.js"></script>
 </body>
-
 </html>
