--- a/javascript/jobportalproject/jobs.html
+++ b/javascript/jobportalproject/jobs.html
@@ -1,66 +1,27 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Available Jobs</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-
-<h2>Available Jobs</h2>
-
-<table border="1">
-    <thead>
-        <tr>
-            <th>Title</th>
-            <th>Company</th>
-            <th>Location</th>
-            <th>Skills</th>
-            <th>Apply</th>
-        </tr>
-    </thead>
-
-    <!-- 👇 IMPORTANT -->
-    <tbody id="jobTable"></tbody>
-</table>
-
-<br>
-<button onclick="viewApplied()">View Applied Jobs</button>
-<button onclick="logout()">Logout</button>
-
-<script src="script.js"></script>
-</body>
-</html>
-
-
-<!-- <!DOCTYPE html>
-<html>
-<head>
-    <title>Available Jobs</title>
-    <link rel="stylesheet" href="style.css">
+<title>Jobs</title>
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
 
 <h2 class="title">Available Jobs</h2>
 
 <div class="table-box">
-    <table>
-        <thead>
-            <tr>
-                <th>Title</th>
-                <th>Company</th>
-                <th>Location</th>
-                <th>Skills</th>
-                <th>Apply</th>
-            </tr>
-        </thead>
-        <tbody id="jobTable"></tbody>
-    </table>
+<button onclick="location.href='applied.html'">View Applied Jobs</button>
+<button onclick="logout()">Logout</button>
 
-    <br>
-    <button onclick="viewApplied()">View Applied Jobs</button>
-    <button onclick="logout()">Logout</button>
+<table>
+<thead>
+<tr>
+<th>Title</th><th>Company</th><th>Location</th><th>Package</th><th>Action</th>
+</tr>
+</thead>
+<tbody id="jobTable"></tbody>
+</table>
 </div>
 
 <script src="script.js"></script>
 </body>
-</html> -->
+</html>
